<resources>
    <string name="app_name">UI Pildoras</string>
    <string name="whipped">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">QUANTITY</string>
    <string name="orderSummary">ORDER SUMMARY</string>
    <string name="order">ORDER</string>
    <string name="toppings">TOPPINGS</string>
    <string name="nameHint">Name</string>
    <string name="_10">$10</string>

</resources>
