<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp">
        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nameHint"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/tvToppings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toppings"
            android:layout_marginBottom="10dp"/>
        <CheckBox
            android:id="@+id/checkWhipped"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="@string/whipped"
            tools:ignore="RtlSymmetry" />
        <CheckBox
            android:id="@+id/checkChocolate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="@string/chocolate"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/tvQuantity2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/quantity"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnMenos"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="-"/>
            <TextView
                android:id="@+id/tvQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:text="0"/>

            <Button
                android:id="@+id/btnMas"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="+"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tvOrderSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/orderSummary"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/tvOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/btnOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>